--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       particularidad de este postre es su forma, ya que se amasa formando unas pequeñas bolas.</p>
     <p>Los colores de estas bolas suelen ser blanco, amarillo, rosa o verde, dependiendo de los ingredientes que se les agreguen: fresas, té verde, huevo, etc. No obstante, existen muchísimas variedades de dango ya que las combinaciones pueden ser infinitas.
         Además, suele servirse para acompañar el té verde.</p>
-        <h1 style="text-align:center;">Recetaa</h1>
+        <h1 style="text-align:center;">Receta</h1>
   <h2 class="subtitulos">Ingredientes</h2>
     <ul>
       <li>120 gramos de harina de arroz glutinosa</li>
